# Splitmint

./: .gitignore  Dockerfile  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260403_0001_initial.py  20260404_0002_product_events.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  chains.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: ai.py  auth.py  balances.py  expenses.py  groups.py  participants.py
backend/app/core/: config.py  errors.py  logging.py  metrics.py  responses.py  security.py  startup.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  expense.py  expense_split.py  group.py  participant.py  product_event.py  refresh_token.py  user.py
backend/app/db/repositories/: expenses.py  groups.py  participants.py  product_events.py  refresh_tokens.py  users.py
backend/app/schemas/: ai.py  auth.py  balance.py  base.py  expense.py  group.py  participant.py
backend/app/services/: ai.py  auth.py  balances.py  events.py  expenses.py  groups.py  ledger.py  participants.py
backend/app/utils/: money.py
backend/scripts/: reset_local_db.py  seed_sample_data.py
backend/splitmint_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_ai.py  test_ai_real_integration.py  test_auth.py  test_expenses_and_balances.py  test_groups_and_participants.py  test_ledger.py  test_observability.py  test_startup_validation.py  test_supabase_config.py
(+24 files in other folders)
